--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.35.8",
+    "compression": "^1.8.1",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
